# principia_optimization

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/unconstrained_optimization/: mod.rs
src/unconstrained_optimization/trust_region/: mod.rs
src/unconstrained_optimization/trust_region/CG/: MICCG.rs  mod.rs
