[package]
name = "principia_optimization"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Numerical Optimization Library"
keywords = [ "Convex", "Nonlinear", "Linear", "Optimization"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
